--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ section {
     background: white;
     border-radius: 8px;
     padding: 45px;
-    width: 400px;
+    width: 50%;
     gap: 20px;
     display: flex;
     align-items: center;
@@ -104,14 +104,13 @@ main a:hover {
     transition: 50ms;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 800px) {
 
     section {
-        height: 70%;
-        padding: 10px;
+        padding: 30px;
         background-color: #FFF;
         width: 80%;
-        gap: 15px;
+        gap: 20px;
         border-radius: 8px;
     }
     .desenvolvido{
@@ -128,6 +127,7 @@ main a:hover {
          animation: animarBorda 75ms linear alternate infinite;
      }
     main a {
+        padding: 6px 0;
         font-size: 13px;
     }
 }
