--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background: #000000;
     flex-direction: column;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(0, 16, 13) 0%, rgb(0, 49, 43) 100%);
 
 }
 section {
@@ -48,25 +49,12 @@ section::before, section::after {
     width: 515px;
     height: 535px;
     border-radius: 8px;
-    background-size: 100% 200%;
-    background: linear-gradient(#d5ac0a, #00ff00, #0099ff, #001aff, #a200ff, #ff0055, #ff0000);
-    animation: animarBorda 75ms linear alternate infinite;
 }
 
 section::after {
     filter: blur(100px);
 }
 
-@keyframes animarBorda {
-    0% {
-        background-size: 50% 50%;
-        filter: blur(50px);
-    }
-    100% {
-        background-size: 300% 300%;
-        filter: blur(100px);
-    }
-}
 header img{
     background-position: center;
     width: 135px;
@@ -84,7 +72,7 @@ main {
 }
 
 main a {
-    background: linear-gradient(to bottom right, rgba(0, 0, 0, 1) 0%, rgba(0, 57, 50, 1) 100%);
+    background: linear-gradient(to bottom right, rgba(0, 2, 0, 36) 0%, rgba(0, 57, 50, 1) 100%);
     padding: 10px 0;
     text-decoration: none;
     color: #fff;
@@ -123,8 +111,6 @@ main a:hover {
          height: 70%;
          border-radius: 8px;
          background-size: 100% 200%;
-         background: linear-gradient(#d5ac0a, #00ff00, #0099ff, #001aff, #a200ff, #ff0055, #ff0000);
-         animation: animarBorda 75ms linear alternate infinite;
      }
     main a {
         padding: 6px 0;
